fixed header on mobile view

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -15,6 +15,7 @@
     justify-content: center;
     border: 5px solid gold;
     width: 100%;
+    
   }
 
   .aboutHeading {
@@ -24,12 +25,11 @@
     font-size: 2rem;
 
     @media screen and (max-width: 500px) {
-      border: 1px solid yellow;
-      font-family: 'Shadows Into Light', cursive;
-      color: #B3A190;
-      font-size: 1rem;
+     margin-top: 15%
    }
   }
+
+
 
   .bigAvatar {
     width: 300px;
@@ -43,6 +43,9 @@
      }
      
      @media screen and (max-width:500px) {
+        display: none;
+      }
+      @media screen and (max-width: 799px) {
         display: none;
       }
   }
