--- a/src/styles/Design.scss
+++ b/src/styles/Design.scss
@@ -5,6 +5,9 @@
     @media screen and (max-width: 500px) {
       display: none;
    }
+   @media screen and (max-width: 799px) {
+    display: none;
+  }
 }
  
   
@@ -24,15 +27,15 @@
 
 
     @media screen and (max-width: 500px) {
-        // border: 1px solid black;
-        // top: 20%;
-        // text-align:center;
-        // height: 150px;
-        // font-size: 1.25rem;
         display: none;
+    }
+    @media screen and (max-width: 799px) {
+      display: none;
     }
   }
   
+
+
   .intro-header {
     font-size: 2.5rem;
     color: #B3A190;
@@ -43,18 +46,32 @@
   
 
 
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 799px) {
       font-size: 1.75rem;
    }
 
     @media screen and (max-width: 500px) {
-       font-size: 1.3rem;
+      font-family: 'Shadows Into Light Two', cursive;
+      font-size: 1.3rem;
+
     }
   }
 
   #volume-icon {
     color: #B3A190;
     margin-top: 6%;
+
+    @media screen and (max-width: 500px) {
+    display: flex;
+    justify-content: center;
+    margin-top: 1%;
+   }
+   @media screen and (max-width: 799px) {
+    display: flex;
+    justify-content: center;
+    margin-top: 1%;
+   }
+
   }
 
   #volume-icon:hover {
