--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -9,14 +9,14 @@
     overflow:hidden;
     z-index: 1;
    
-    // @media screen and (max-width: 500px) {
-    //     border: 1px solid blueviolet;
-    //     display: flex;
-    //     flex-direction: column;
-    //     height: 150px;
-    //     align-items: center;
-    //     position: fixed;
-    // }
+    @media screen and (max-width: 500px) {
+        top: 0;
+        position: fixed;
+    }
+    @media screen and (max-width: 799px) {
+        top: 0;
+        position: fixed;
+      }
 }
 /* 
 zindex fixed overlapping nav */
@@ -32,12 +32,14 @@ zindex fixed overlapping nav */
     @media screen and (max-width: 500px) {
         // border: 1px solid #B3A190;
         align-items: center;
+        font-family: 'Shadows Into Light', cursive;
     }
 }
 
 .nav-wrapper a:hover,
 .nav-wrapper a.active {
     color: #E63629;
+
 }
 
 
